--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,15 @@
       "todohighlight.keywords": [
             {
                   "text": "WARNING:",
-                  "color": "#ffff00",
-                  "backgroundColor": "#000000",
-                  "border": "1px solid #ffff00"
+                  "color": "#000000", // texto preto
+                  "backgroundColor": "#ffff00", // fundo amarelo
+                  "border": "2px solid #000000" // borda preta (opcional, combina melhor com o novo esquema)
+            },
+            {
+                  "text": "HACK",
+                  "color": "#D32F2F",
+                  "backgroundColor": "#FFECB3",
+                  "border": "2px solid #000000"
             }
       ]
 }
